Fix HomeMenu toggler position on IOS devices

--- a/src/components/Sections/HomeMenu/styles.scss
+++ b/src/components/Sections/HomeMenu/styles.scss
@@ -50,6 +50,12 @@ $transition: all 1.4s cubic-bezier(.81,.42,.33,1);
             }
         }
         
+        &.ios{
+            button{
+                    margin-left: 20px;
+            }
+        }
+
         button{
             position: relative;
             left: 74px;
@@ -58,11 +64,6 @@ $transition: all 1.4s cubic-bezier(.81,.42,.33,1);
             border: none;
             transform: translateX(-240%);
             transition: $transition;
-
-            @supports (-webkit-touch-callout: none) {
-                margin-left: 20px;
-              }
-              
 
             // Click overlay
             &:after{
